tests/neg/i2033.check
-- Error: tests/neg/i2033.scala:7:30 -----------------------------------------------------------------------------------
7 |    val arr = bos toByteArray ()  // error
  |                              ^^
  |can't supply unit value with infix notation because nullary method toByteArray in class ByteArrayOutputStream: (): Array[Byte] takes no arguments; use dotted invocation instead: (...).toByteArray()
-- [E007] Type Mismatch Error: tests/neg/i2033.scala:20:35 -------------------------------------------------------------
20 |  val out = new ObjectOutputStream(println) // error
   |                                   ^^^^^^^
   |                                   Found:    Unit
   |                                   Required: String

longer explanation available when compiling with `-explain`
-- Warning: tests/neg/i2033.scala:6:37 ---------------------------------------------------------------------------------
6 |    val out = new ObjectOutputStream(println)
  |                                     ^^^^^^^
  |method println is eta-expanded even though java.io.OutputStream does not have the @FunctionalInterface annotation.
